JavaCPP port completed (may need more polish, though!).